Fixed NATS issue where multiple ON routes were not supported. (#27)
