# internal/testext/gen/sample_service.gen.openapi.yml
@@ -1,6 +1,6 @@
 # Code generated by Frodo - DO NOT EDIT.
 #
-#   Timestamp: Fri, 15 Nov 2024 12:49:05 EST
+#   Timestamp: Wed, 12 Mar 2025 12:25:40 EDT
 #   Source:    sample_service.go
 #   Generator: https:#github.com/bridgekit-io/frodo
 #
@@ -819,20 +819,7 @@ paths:
 components:
     schemas:
         
-        SampleRedirectResponse:
-            type: object
-            
-            properties:
-                
-                URI:
-                    type: string
-                    
-                    
-                    
-                
-            
-        
-        SampleSecurityRequest:
+        SampleResponse:
             type: object
             
             properties:
@@ -843,15 +830,9 @@ components:
                     
                     
                 
-                User:
+                Text:
+                    type: string
                     
-                    $ref: "#/components/schemas/SampleUser"
-                    
-                    
-                
-                FancyID:
-                    
-                    $ref: "#/components/schemas/StringLike"
                     
                     
                 
@@ -900,12 +881,12 @@ components:
                 
             
         
-        FailAlwaysResponse:
+        FailAlwaysRequest:
             type: object
             
             properties:
                 
-                ResponseValue:
+                RequestValue:
                     type: string
                     
                     
@@ -913,19 +894,105 @@ components:
                 
             
         
-        time.Time:
-            type: object
-            
-        
-        SampleDownloadResponse:
-            type: object
-            
-        
-        SampleRedirectRequest:
-            type: object
-            
-        
         MarshalToObject:
+            type: object
+            
+            properties:
+                
+                Home:
+                    type: string
+                    
+                    
+                    description: > 
+                        Home is supposed to be a home email address.
+                    
+                
+                Work:
+                    type: string
+                    
+                    
+                    description: > 
+                        Work is supposed to be a home email address.
+                    
+                
+            
+        
+        SampleRedirectResponse:
+            type: object
+            
+            properties:
+                
+                URI:
+                    type: string
+                    
+                    
+                    
+                
+            
+        
+        SampleSecurityResponse:
+            type: object
+            
+            properties:
+                
+                Roles:
+                    type: array
+                    
+                    
+                    items:
+                        type: string
+                        
+                    
+                    
+                
+            
+        
+        StringLike:
+            type: string
+            
+        
+        SampleComplexResponse:
+            type: object
+            
+            properties:
+                
+                OutFlag:
+                    type: boolean
+                    
+                    
+                    
+                
+                OutFloat:
+                    type: number
+                    
+                    
+                    
+                
+                OutUser:
+                    
+                    $ref: "#/components/schemas/SampleUser"
+                    
+                    
+                
+                OutTime:
+                    
+                    $ref: "#/components/schemas/time.Time"
+                    
+                    
+                
+                OutTimePtr:
+                    
+                    $ref: "#/components/schemas/time.Time"
+                    
+                    
+                
+            
+        
+        CustomDuration:
+            type: number
+            
+        
+        MarshalToString:
             type: object
             
             properties:
@@ -961,18 +1028,57 @@ components:
                 
             
         
-        SampleSecurityResponse:
+        SampleDownloadResponse:
+            type: object
+            
+        
+        SampleRequest:
             type: object
             
             properties:
                 
-                Roles:
-                    type: array
+                ID:
+                    type: string
                     
                     
-                    items:
-                        type: string
-                        
+                    
+                
+                Text:
+                    type: string
+                    
+                    
+                    
+                
+            
+        
+        time.Duration:
+            type: number
+            
+        
+        time.Time:
+            type: object
+            
+        
+        SampleSecurityRequest:
+            type: object
+            
+            properties:
+                
+                ID:
+                    type: string
+                    
+                    
+                    
+                
+                User:
+                    
+                    $ref: "#/components/schemas/SampleUser"
+                    
+                    
+                
+                FancyID:
+                    
+                    $ref: "#/components/schemas/StringLike"
                     
                     
                 
@@ -1002,6 +1108,23 @@ components:
                     
                 
                 Text:
+                    type: string
+                    
+                    
+                    
+                
+            
+        
+        FailAlwaysErrorResponse:
+            type: object
+            
+        
+        FailAlwaysResponse:
+            type: object
+            
+            properties:
+                
+                ResponseValue:
                     type: string
                     
                     
@@ -1126,130 +1249,7 @@ components:
                 
             
         
-        time.Duration:
-            type: number
-            
-        
-        SampleResponse:
+        SampleRedirectRequest:
             type: object
-            
-            properties:
-                
-                ID:
-                    type: string
-                    
-                    
-                    
-                
-                Text:
-                    type: string
-                    
-                    
-                    
-                
-            
-        
-        MarshalToString:
-            type: object
-            
-            properties:
-                
-                Home:
-                    type: string
-                    
-                    
-                    description: > 
-                        Home is supposed to be a home email address.
-                    
-                
-                Work:
-                    type: string
-                    
-                    
-                    description: > 
-                        Work is supposed to be a home email address.
-                    
-                
-            
-        
-        StringLike:
-            type: string
-            
-        
-        SampleRequest:
-            type: object
-            
-            properties:
-                
-                ID:
-                    type: string
-                    
-                    
-                    
-                
-                Text:
-                    type: string
-                    
-                    
-                    
-                
-            
-        
-        CustomDuration:
-            type: number
-            
-        
-        FailAlwaysErrorResponse:
-            type: object
-            
-        
-        FailAlwaysRequest:
-            type: object
-            
-            properties:
-                
-                RequestValue:
-                    type: string
-                    
-                    
-                    
-                
-            
-        
-        SampleComplexResponse:
-            type: object
-            
-            properties:
-                
-                OutFlag:
-                    type: boolean
-                    
-                    
-                    
-                
-                OutFloat:
-                    type: number
-                    
-                    
-                    
-                
-                OutUser:
-                    
-                    $ref: "#/components/schemas/SampleUser"
-                    
-                    
-                
-                OutTime:
-                    
-                    $ref: "#/components/schemas/time.Time"
-                    
-                    
-                
-                OutTimePtr:
-                    
-                    $ref: "#/components/schemas/time.Time"
-                    
-                    
-                
             
         
