# internal/testext/gen/sample_service.gen.server.go
@@ -1,6 +1,6 @@
 // Code generated by Frodo - DO NOT EDIT.
 //
-//	Timestamp: Fri, 15 Nov 2024 12:49:04 EST
+//	Timestamp: Wed, 12 Mar 2025 12:25:38 EDT
 //	Source:    sample_service.go
 //	Generator: https://github.com/bridgekit-io/frodo
 package testext
@@ -56,6 +56,9 @@ func SampleServiceServer(handler testext.SampleService, middleware ...services.M
 						PathParams:  []string{},
 						Group:       "",
 						Status:      200,
+						ServiceName: "SampleService",
+						Name:        "Authorization",
+						Roles:       []string{},
 					},
 				},
 			},
@@ -80,6 +83,9 @@ func SampleServiceServer(handler testext.SampleService, middleware ...services.M
 						PathParams:  []string{},
 						Group:       "",
 						Status:      200,
+						ServiceName: "SampleService",
+						Name:        "Chain1",
+						Roles:       []string{},
 					},
 				},
 			},
@@ -104,6 +110,9 @@ func SampleServiceServer(handler testext.SampleService, middleware ...services.M
 						PathParams:  []string{},
 						Group:       "",
 						Status:      200,
+						ServiceName: "SampleService",
+						Name:        "Chain1GroupFooBar",
+						Roles:       []string{},
 					},
 
 					{
@@ -113,6 +122,9 @@ func SampleServiceServer(handler testext.SampleService, middleware ...services.M
 						PathParams:  []string{},
 						Group:       "FooBar",
 						Status:      0,
+						ServiceName: "SampleService",
+						Name:        "Chain1GroupFooBar",
+						Roles:       []string{},
 					},
 				},
 			},
@@ -137,6 +149,9 @@ func SampleServiceServer(handler testext.SampleService, middleware ...services.M
 						PathParams:  []string{},
 						Group:       "",
 						Status:      200,
+						ServiceName: "SampleService",
+						Name:        "Chain1GroupStar",
+						Roles:       []string{},
 					},
 
 					{
@@ -146,6 +161,9 @@ func SampleServiceServer(handler testext.SampleService, middleware ...services.M
 						PathParams:  []string{},
 						Group:       "*",
 						Status:      0,
+						ServiceName: "SampleService",
+						Name:        "Chain1GroupStar",
+						Roles:       []string{},
 					},
 				},
 			},
@@ -170,6 +188,9 @@ func SampleServiceServer(handler testext.SampleService, middleware ...services.M
 						PathParams:  []string{},
 						Group:       "",
 						Status:      200,
+						ServiceName: "SampleService",
+						Name:        "Chain2",
+						Roles:       []string{},
 					},
 
 					{
@@ -179,6 +200,9 @@ func SampleServiceServer(handler testext.SampleService, middleware ...services.M
 						PathParams:  []string{},
 						Group:       "",
 						Status:      0,
+						ServiceName: "SampleService",
+						Name:        "Chain2",
+						Roles:       []string{},
 					},
 				},
 			},
@@ -203,6 +227,9 @@ func SampleServiceServer(handler testext.SampleService, middleware ...services.M
 						PathParams:  []string{},
 						Group:       "",
 						Status:      0,
+						ServiceName: "SampleService",
+						Name:        "Chain2OnError",
+						Roles:       []string{},
 					},
 				},
 			},
@@ -227,6 +254,9 @@ func SampleServiceServer(handler testext.SampleService, middleware ...services.M
 						PathParams:  []string{},
 						Group:       "",
 						Status:      0,
+						ServiceName: "SampleService",
+						Name:        "Chain2OnSuccess",
+						Roles:       []string{},
 					},
 				},
 			},
@@ -251,6 +281,9 @@ func SampleServiceServer(handler testext.SampleService, middleware ...services.M
 						PathParams:  []string{},
 						Group:       "",
 						Status:      200,
+						ServiceName: "SampleService",
+						Name:        "ComplexValues",
+						Roles:       []string{},
 					},
 				},
 			},
@@ -277,8 +310,11 @@ func SampleServiceServer(handler testext.SampleService, middleware ...services.M
 
 							"InUser.Name",
 						},
-						Group:  "",
-						Status: 200,
+						Group:       "",
+						Status:      200,
+						ServiceName: "SampleService",
+						Name:        "ComplexValuesPath",
+						Roles:       []string{},
 					},
 				},
 			},
@@ -305,8 +341,11 @@ func SampleServiceServer(handler testext.SampleService, middleware ...services.M
 
 							"Text",
 						},
-						Group:  "",
-						Status: 202,
+						Group:       "",
+						Status:      202,
+						ServiceName: "SampleService",
+						Name:        "CustomRoute",
+						Roles:       []string{},
 					},
 				},
 			},
@@ -331,8 +370,11 @@ func SampleServiceServer(handler testext.SampleService, middleware ...services.M
 						PathParams: []string{
 							"ID",
 						},
-						Group:  "",
-						Status: 201,
+						Group:       "",
+						Status:      201,
+						ServiceName: "SampleService",
+						Name:        "CustomRouteBody",
+						Roles:       []string{},
 					},
 				},
 			},
@@ -357,8 +399,11 @@ func SampleServiceServer(handler testext.SampleService, middleware ...services.M
 						PathParams: []string{
 							"ID",
 						},
-						Group:  "",
-						Status: 202,
+						Group:       "",
+						Status:      202,
+						ServiceName: "SampleService",
+						Name:        "CustomRouteQuery",
+						Roles:       []string{},
 					},
 				},
 			},
@@ -383,6 +428,9 @@ func SampleServiceServer(handler testext.SampleService, middleware ...services.M
 						PathParams:  []string{},
 						Group:       "",
 						Status:      200,
+						ServiceName: "SampleService",
+						Name:        "Defaults",
+						Roles:       []string{},
 					},
 				},
 			},
@@ -407,6 +455,9 @@ func SampleServiceServer(handler testext.SampleService, middleware ...services.M
 						PathParams:  []string{},
 						Group:       "",
 						Status:      200,
+						ServiceName: "SampleService",
+						Name:        "Download",
+						Roles:       []string{},
 					},
 				},
 			},
@@ -431,6 +482,9 @@ func SampleServiceServer(handler testext.SampleService, middleware ...services.M
 						PathParams:  []string{},
 						Group:       "",
 						Status:      200,
+						ServiceName: "SampleService",
+						Name:        "DownloadResumable",
+						Roles:       []string{},
 					},
 				},
 			},
@@ -455,6 +509,9 @@ func SampleServiceServer(handler testext.SampleService, middleware ...services.M
 						PathParams:  []string{},
 						Group:       "",
 						Status:      200,
+						ServiceName: "SampleService",
+						Name:        "Fail4XX",
+						Roles:       []string{},
 					},
 				},
 			},
@@ -479,6 +536,9 @@ func SampleServiceServer(handler testext.SampleService, middleware ...services.M
 						PathParams:  []string{},
 						Group:       "",
 						Status:      200,
+						ServiceName: "SampleService",
+						Name:        "Fail5XX",
+						Roles:       []string{},
 					},
 				},
 			},
@@ -503,6 +563,9 @@ func SampleServiceServer(handler testext.SampleService, middleware ...services.M
 						PathParams:  []string{},
 						Group:       "",
 						Status:      200,
+						ServiceName: "SampleService",
+						Name:        "FailAlways",
+						Roles:       []string{},
 					},
 				},
 			},
@@ -527,6 +590,9 @@ func SampleServiceServer(handler testext.SampleService, middleware ...services.M
 						PathParams:  []string{},
 						Group:       "",
 						Status:      200,
+						ServiceName: "SampleService",
+						Name:        "ListenerA",
+						Roles:       []string{},
 					},
 
 					{
@@ -536,6 +602,9 @@ func SampleServiceServer(handler testext.SampleService, middleware ...services.M
 						PathParams:  []string{},
 						Group:       "",
 						Status:      0,
+						ServiceName: "SampleService",
+						Name:        "ListenerA",
+						Roles:       []string{},
 					},
 				},
 			},
@@ -560,6 +629,9 @@ func SampleServiceServer(handler testext.SampleService, middleware ...services.M
 						PathParams:  []string{},
 						Group:       "",
 						Status:      0,
+						ServiceName: "SampleService",
+						Name:        "ListenerB",
+						Roles:       []string{},
 					},
 
 					{
@@ -569,6 +641,9 @@ func SampleServiceServer(handler testext.SampleService, middleware ...services.M
 						PathParams:  []string{},
 						Group:       "",
 						Status:      0,
+						ServiceName: "SampleService",
+						Name:        "ListenerB",
+						Roles:       []string{},
 					},
 
 					{
@@ -578,6 +653,9 @@ func SampleServiceServer(handler testext.SampleService, middleware ...services.M
 						PathParams:  []string{},
 						Group:       "",
 						Status:      0,
+						ServiceName: "SampleService",
+						Name:        "ListenerB",
+						Roles:       []string{},
 					},
 
 					{
@@ -587,6 +665,9 @@ func SampleServiceServer(handler testext.SampleService, middleware ...services.M
 						PathParams:  []string{},
 						Group:       "",
 						Status:      0,
+						ServiceName: "SampleService",
+						Name:        "ListenerB",
+						Roles:       []string{},
 					},
 
 					{
@@ -596,6 +677,9 @@ func SampleServiceServer(handler testext.SampleService, middleware ...services.M
 						PathParams:  []string{},
 						Group:       "",
 						Status:      0,
+						ServiceName: "SampleService",
+						Name:        "ListenerB",
+						Roles:       []string{},
 					},
 				},
 			},
@@ -635,6 +719,9 @@ func SampleServiceServer(handler testext.SampleService, middleware ...services.M
 						PathParams:  []string{},
 						Group:       "",
 						Status:      200,
+						ServiceName: "SampleService",
+						Name:        "OnFailAlways",
+						Roles:       []string{},
 					},
 
 					{
@@ -644,6 +731,9 @@ func SampleServiceServer(handler testext.SampleService, middleware ...services.M
 						PathParams:  []string{},
 						Group:       "",
 						Status:      0,
+						ServiceName: "SampleService",
+						Name:        "OnFailAlways",
+						Roles:       []string{},
 					},
 				},
 			},
@@ -668,6 +758,9 @@ func SampleServiceServer(handler testext.SampleService, middleware ...services.M
 						PathParams:  []string{},
 						Group:       "",
 						Status:      200,
+						ServiceName: "SampleService",
+						Name:        "Panic",
+						Roles:       []string{},
 					},
 				},
 			},
@@ -692,6 +785,9 @@ func SampleServiceServer(handler testext.SampleService, middleware ...services.M
 						PathParams:  []string{},
 						Group:       "",
 						Status:      200,
+						ServiceName: "SampleService",
+						Name:        "Redirect",
+						Roles:       []string{},
 					},
 				},
 			},
@@ -721,6 +817,14 @@ func SampleServiceServer(handler testext.SampleService, middleware ...services.M
 						PathParams:  []string{},
 						Group:       "",
 						Status:      200,
+						ServiceName: "SampleService",
+						Name:        "SecureWithRoles",
+						Roles: []string{
+							"admin.write",
+							"user.{ID}.write",
+							"user.{User.ID}.admin",
+							"junk.{NotReal}.crap",
+						},
 					},
 				},
 			},
@@ -750,6 +854,14 @@ func SampleServiceServer(handler testext.SampleService, middleware ...services.M
 						PathParams:  []string{},
 						Group:       "",
 						Status:      200,
+						ServiceName: "SampleService",
+						Name:        "SecureWithRolesAliased",
+						Roles: []string{
+							"admin.write",
+							"user.{FancyID}.write",
+							"user.{User.FancyID}.admin",
+							"junk.{NotReal}.crap",
+						},
 					},
 				},
 			},
@@ -774,6 +886,9 @@ func SampleServiceServer(handler testext.SampleService, middleware ...services.M
 						PathParams:  []string{},
 						Group:       "",
 						Status:      200,
+						ServiceName: "SampleService",
+						Name:        "Sleep",
+						Roles:       []string{},
 					},
 				},
 			},
@@ -798,6 +913,9 @@ func SampleServiceServer(handler testext.SampleService, middleware ...services.M
 						PathParams:  []string{},
 						Group:       "",
 						Status:      200,
+						ServiceName: "SampleService",
+						Name:        "TriggerFailure",
+						Roles:       []string{},
 					},
 				},
 			},
@@ -822,6 +940,9 @@ func SampleServiceServer(handler testext.SampleService, middleware ...services.M
 						PathParams:  []string{},
 						Group:       "",
 						Status:      200,
+						ServiceName: "SampleService",
+						Name:        "TriggerLowerCase",
+						Roles:       []string{},
 					},
 				},
 			},
@@ -846,6 +967,9 @@ func SampleServiceServer(handler testext.SampleService, middleware ...services.M
 						PathParams:  []string{},
 						Group:       "",
 						Status:      200,
+						ServiceName: "SampleService",
+						Name:        "TriggerUpperCase",
+						Roles:       []string{},
 					},
 				},
 			},
